<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoadReporter</string>
    <string name="action_settings">Settings</string>
    <string name="lable_title">Title</string>
    <string name="hint_title">Title of the Report</string>
    <string name="lable_description">Description</string>
    <string name="hint_description">Description of the Report</string>
    <string name="lable_photo">Take Picture</string>
    <string name="button_save">Save Report</string>
    <string name="button_submit">Submit Report</string>
    <string name="button_update">Update Report</string>
    <string name="button_photo">Take Photo</string>
    <string name="gps_error_off">GPS is off, Start it ?</string>
    <string name="gps_error_photo">Your GPS is currently turned off. RoadReporter needs to know the exact location of this photo in order to work correctly. \n\nClicking OK will take you to the settings page where you can enable GPS. Please wait about a minute after turning on your GPS for greater accuracy. </string>
    <string name="gps_error_nofix">Waiting for a gps fix, please wait for some time </string>
    <string name="ok"> OK</string>
    <string name="no"> No</string>
    <string name= "cancel"> Cancel</string>
    <string name="title_error_notset">Please enter the Title </string>
    <string name="desc_error_notset">Please enter the Description </string>
    <string name="show_reports">Display Saved Reports</string>
    <string name="context_submit">Submit Report</string>
    <string name="menu_submit_all">Submit All Reports</string>
    <string name="context_delete">Delete Report</string>
    <string name="menu_delete_all">Delete All Reports</string>
    <string name="context_details">View Detais</string>
    <string name="discard_msg">Do you want to discard the post?</string>
    <string name="message_empty_list">Nothing to display here. Looks like you have submitted all your reports. Please save some reports to populate this list. </string>
    <string name="lable_cat">Categories</string>

    <string-array name="report_catogery">
        <item>Damaged Road</item>
        <item>Garbage</item>
        <item>Other</item>
    </string-array>

</resources>